<resources>
    <string name="app_name">Android interview</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="book_cover">book cover</string>

    <string name="network_refreshing">Refreshing…</string>
    <string name="network_offline">You are currently offline</string>
    <string name="network_error">Error while downloading</string>
    <string name="publisher">Publisher</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="authors">Authors</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
</resources>