<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailHostActivity"
    tools:ignore="MergeRootFrame"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            >

            <ImageView
                android:id="@+id/image_Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:layout_collapseMode="parallax"
                />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/item_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:paddingBottom="16dp"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                android:text="@string/authors"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />
            <TextView
                android:id="@+id/item_authors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                android:text="@string/publisher"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />
            <TextView
                android:id="@+id/item_publisher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rating"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />
            <TextView
                android:id="@+id/item_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/year"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />
            <TextView
                android:id="@+id/item_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />
            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/container_horizontal_margin"
                android:paddingEnd="@dimen/container_horizontal_margin"
                android:textIsSelectable="true"
                tools:context="com.mnw.androidinterview.ItemDetailFragment"
                />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>